--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=Tentime player ios
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=.
+sonar.sources=Sources
 
 # Path to the directory with binaries (optional but recommended)
 # sonar.binaries=build
